# solar-report

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/: csv-format.md  docker.md  events-format.md
sample-data/: example-week-events.csv  example-week.csv
src/solar_report/: __init__.py  cli.py  config.py
src/solar_report/analysis/: __init__.py  aggregations.py  anomalies.py  models.py  pipeline.py
src/solar_report/llm/: __init__.py  client.py
src/solar_report/report/: __init__.py  generator.py  prompts.py
src/solar_report/report/templates/: report.html.j2  report.md.j2
src/solar_report/sources/: __init__.py  base.py  csv_source.py
tests/fixtures/: config-minimal.yaml
tests/unit/: test_aggregations.py  test_analysis_models.py  test_anomalies.py  test_cli.py  test_config.py  test_csv_source.py  test_generator.py  test_generator_templates.py  test_pipeline.py  test_prompts.py
