[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solar-report"
version = "0.1.0"
description = "Human-readable reports from your solar PV system data, powered by an LLM"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Marco Conti" }]
keywords = ["solar", "photovoltaic", "home-assistant", "reporting", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
    "pandas-stubs",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/contimarco77/solar-report"

[tool.hatch.build.targets.wheel]
packages = ["src/solar_report"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# SYSTEM_PROMPT is a verbatim, snapshot-tested LLM prompt; its lines must not be wrapped.
"src/solar_report/report/prompts.py" = ["E501"]

[tool.mypy]
strict = true
files = ["src"]
mypy_path = "src"
